# docs/swagger.json
@@ -373,6 +373,38 @@
                 }
             }
         },
+        "/v1/files/upload": {
+            "post": {
+                "description": "Upload a static file to Henar DigitalOcean failopoika's and get the uri",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "files"
+                ],
+                "summary": "Upload file",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/types.FileResponce"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/locations": {
             "get": {
                 "description": "Retrieves all locations",
@@ -1903,6 +1935,14 @@
                 },
                 "title": {
                     "$ref": "#/definitions/types.Translations"
+                }
+            }
+        },
+        "types.FileResponce": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
                 }
             }
         },
